--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -5,5 +5,9 @@
 // Variables
 @import "variables";
 
+// Font awesome
+@import "~font-awesome/scss/font-awesome";
+
+
 // Bootstrap
 @import "~bulma/bulma";
